# tree-sitter-beancount

./: Cargo.toml  binding.gyp  grammar.js  package.json
.github/workflows/: ci.yml
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: transaction.txt
