[package]
name = "tree-sitter-beancount"
description = "Beancount grammar for tree-sitter"
version = "0.0.1"
keywords = ["incremental", "parsing", "beancount"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/dnicolodi/tree-sitter-beancount"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
